# stm32-sched

./: CMakeLists.txt  README.md  build.sh
CMSIS/Device/ST/STM32L4xx/Config/: stm32l4xx_gcc.ld
CMSIS/Device/ST/STM32L4xx/Source/: system_stm32l4xx.c
CMSIS/Device/ST/STM32L4xx/Source/gcc/: startup_stm32l4xx.c
User/: CMakeLists.txt  README.md  main.c
User/Config/: stm32l4xx_gcc.ld
User/Include/: clock_config.h  demo_tasks.h  isr.h  msi_config.h  task.h  task_manager.h  task_scheduler.h
User/Source/: clock_config.c  crt0.S  demo_tasks.c  isr.c  msi_config.c  task.c  task_manager.c  task_scheduler.c
