add_executable(
    firmware
    ${PROJECT_SOURCE_DIR}/CMSIS/Device/ST/STM32L4xx/Source/system_stm32l4xx.c
    ${PROJECT_SOURCE_DIR}/CMSIS/Device/ST/STM32L4xx/Source/gcc/startup_stm32l4xx.c
    ${CMAKE_CURRENT_LIST_DIR}/Source/crt0.S
    ${CMAKE_CURRENT_LIST_DIR}/Source/isr.c
    ${CMAKE_CURRENT_LIST_DIR}/Source/msi_config.c
    ${CMAKE_CURRENT_LIST_DIR}/Source/task_manager.c
    ${CMAKE_CURRENT_LIST_DIR}/Source/demo_tasks.c
    ${CMAKE_CURRENT_LIST_DIR}/main.c
)

target_include_directories(
    firmware
    PUBLIC
    ${PROJECT_SOURCE_DIR}/CMSIS/Core/Include
    ${PROJECT_SOURCE_DIR}/CMSIS/Core/Include/m-profile
    ${PROJECT_SOURCE_DIR}/CMSIS/Device/ST/STM32L4xx/Include
    ${CMAKE_CURRENT_LIST_DIR}/Include
)
